[package]
name = "cassandra-d"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Decentralized Cassandra"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/cassandra-d"
repository = "https://github.com/resolvingarchitecture/cassandra-d.git"
publish = true
readme = "README.md"
keywords = ["decentralized","cassandra","apache cassandra","p2p persistence"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.0.28"
seda_bus = "0.0.10"